--- a/src/templates/navigation/navigation.html
+++ b/src/templates/navigation/navigation.html
@@ -6,7 +6,7 @@
     {% include "navigation/navbar.html" %}
     <div class="w-full px-6 py-2">
         <div class="flex flex-col gap-5">
-            {% include "navigation/searchbar.html" %}
+            {% include "navigation/top_bar_controls.html" %}
             <!-- Aqui va el content -->
             {% block app_content %}
             {% endblock %}
