--- a/src/templates/navigation/choose_path.html
+++ b/src/templates/navigation/choose_path.html
@@ -8,12 +8,17 @@
 
     <div class="flex flex-col sm:flex-row justify-center space-y-4 sm:space-y-0 sm:space-x-8">
         <!-- Freelancer Card -->
-        <a href="{% url 'register_freelancer' %}" class="w-full sm:w-64 border border-primary_light p-6 rounded-lg text-center hover:shadow-lg transition-transform transform hover:-translate-y-1 duration-300">
+        <a href="{% url 'register_freelancer' %}"
+            class="w-full sm:w-64 border border-primary_light p-6 rounded-lg text-center hover:shadow-lg transition-transform transform hover:-translate-y-1 duration-300">
             <div class="flex justify-center items-center mb-4">
                 <div class="bg-blue-100 rounded-full p-3">
-                    <svg class="h-10 w-10 text-primary_medium" fill="none" stroke="currentColor" viewBox="0 0 24 24" aria-hidden="true">
-                        <path d="M12 14l-2-2m0 0l-2-2m2 2h8M4 18l16 0" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"></path>
+
+                    <svg width="41" height="42" viewBox="0 0 41 42" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M27.3332 3.86542H13.6665C6.83317 3.86542 3.4165 7.28208 3.4165 14.1154V22.6571C3.4165 31.1988 6.83317 32.9071 13.6665 32.9071H14.5207C14.999 32.9071 15.614 33.2146 15.8873 33.5904L18.4498 37.0071C19.5773 38.5104 21.4223 38.5104 22.5498 37.0071L25.1123 33.5904C25.4369 33.1633 25.9494 32.9071 26.479 32.9071H27.3332C34.1665 32.9071 37.5832 29.4904 37.5832 22.6571V14.1154C37.5832 7.28208 34.1665 3.86542 27.3332 3.86542ZM14.5719 21.2904C15.0673 21.7858 15.0673 22.6058 14.5719 23.1012C14.3157 23.3575 13.9911 23.4771 13.6665 23.4771C13.3419 23.4771 13.0173 23.3575 12.7611 23.1012L9.34442 19.6846C8.849 19.1892 8.849 18.3692 9.34442 17.8738L12.7611 14.4571C13.2565 13.9617 14.0765 13.9617 14.5719 14.4571C15.0673 14.9525 15.0673 15.7725 14.5719 16.2679L12.0607 18.7792L14.5719 21.2904ZM23.3869 15.2942L19.9703 23.2721C19.7653 23.7504 19.2869 24.0408 18.7915 24.0408C18.6207 24.0408 18.4498 24.0067 18.279 23.9383C17.6298 23.665 17.3223 22.9133 17.6128 22.2471L21.0294 14.2692C21.3028 13.62 22.0544 13.3125 22.7207 13.6029C23.3698 13.8933 23.6603 14.645 23.3869 15.2942ZM31.6553 19.6846L28.2386 23.1012C27.9823 23.3575 27.6578 23.4771 27.3332 23.4771C27.0086 23.4771 26.684 23.3575 26.4278 23.1012C25.9323 22.6058 25.9323 21.7858 26.4278 21.2904L28.939 18.7792L26.4278 16.2679C25.9323 15.7725 25.9323 14.9525 26.4278 14.4571C26.9232 13.9617 27.7432 13.9617 28.2386 14.4571L31.6553 17.8738C32.1507 18.3692 32.1507 19.1892 31.6553 19.6846Z"
+                            fill="#3D46F2" />
                     </svg>
+
                 </div>
             </div>
             <h2 class="text-lg font-semibold text-primary_medium">Freelancer</h2>
@@ -23,12 +28,19 @@
         </a>
 
         <!-- Client Card -->
-        <a href="{% url 'register_company' %}" class="w-full sm:w-64 border border-primary_light p-6 rounded-lg text-center hover:shadow-lg transition-transform transform hover:-translate-y-1 duration-300">
+        <a href="{% url 'register_company' %}"
+            class="w-full sm:w-64 border border-primary_light p-6 rounded-lg text-center hover:shadow-lg transition-transform transform hover:-translate-y-1 duration-300">
             <div class="flex justify-center items-center mb-4">
                 <div class="bg-blue-100 rounded-full p-3">
-                    <svg class="h-10 w-10 text-primary_medium" fill="none" stroke="currentColor" viewBox="0 0 24 24" aria-hidden="true">
-                        <path d="M3 10h4m4 0h4m4 0h4M3 6h18M3 14h18M3 18h18" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"></path>
+                    <svg width="41" height="42" viewBox="0 0 41 42" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M8.5415 14.1667C5.70567 14.1667 3.4165 16.4559 3.4165 19.2917V32.9584C3.4165 35.7942 5.70567 38.0834 8.5415 38.0834H11.104C12.9832 38.0834 14.5207 36.5459 14.5207 34.6667V17.5834C14.5207 15.7042 12.9832 14.1667 11.104 14.1667H8.5415ZM10.2498 29.5417C10.2498 30.2421 9.669 30.8229 8.96859 30.8229C8.26817 30.8229 7.68734 30.2421 7.68734 29.5417V22.7084C7.68734 22.0079 8.26817 21.4271 8.96859 21.4271C9.669 21.4271 10.2498 22.0079 10.2498 22.7084V29.5417Z"
+                            fill="#3D46F2" />
+                        <path
+                            d="M32.4585 3.91669H22.2085C19.3727 3.91669 17.0835 6.20585 17.0835 9.04169V32.9584C17.0835 35.7942 19.3727 38.0834 22.2085 38.0834H23.0627C23.541 38.0834 23.9168 37.7075 23.9168 37.2292V31.25C23.9168 30.3104 24.6856 29.5417 25.6252 29.5417H29.0418C29.9814 29.5417 30.7502 30.3104 30.7502 31.25V37.2292C30.7502 37.7075 31.126 38.0834 31.6043 38.0834H32.4585C35.2943 38.0834 37.5835 35.7942 37.5835 32.9584V9.04169C37.5835 6.20585 35.2943 3.91669 32.4585 3.91669ZM25.1981 22.7084C25.1981 23.4088 24.6172 23.9896 23.9168 23.9896C23.2164 23.9896 22.6356 23.4088 22.6356 22.7084V14.1667C22.6356 13.4663 23.2164 12.8854 23.9168 12.8854C24.6172 12.8854 25.1981 13.4663 25.1981 14.1667V22.7084ZM32.0314 22.7084C32.0314 23.4088 31.4506 23.9896 30.7502 23.9896C30.0497 23.9896 29.4689 23.4088 29.4689 22.7084V14.1667C29.4689 13.4663 30.0497 12.8854 30.7502 12.8854C31.4506 12.8854 32.0314 13.4663 32.0314 14.1667V22.7084Z"
+                            fill="#3D46F2" />
                     </svg>
+
                 </div>
             </div>
             <h2 class="text-lg font-semibold text-primary_medium">Cliente</h2>
